fix: graphical milestone scrollbar

--- a/css/milestone.css
+++ b/css/milestone.css
@@ -4,6 +4,8 @@
 
 #milestonesGraphicalView {
   display: none;
+  overflow-x: scroll;
+  padding-bottom: 1.2rem;
 }
 
 .title-capsule-heading {
@@ -14,6 +16,9 @@
 .timeline {
   padding-top: 8px;
   position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
 }
 
 #dropdownListOptions{
@@ -24,7 +29,7 @@
 .timeline li {
   list-style: none;
   float: left;
-  width: 25%;
+  min-width: 25%;
   position: relative;
   text-align: center;
   font-size: 10px;
